# szs_client

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Client/c_soundzone_client/: CMakeLists.txt  add_deps.bat  main.cpp  update_deps.bat
Client/c_soundzone_client/include/: alsadriver.h  test_src.h
Client/c_soundzone_client/src/: alsadriver.cpp  alsadriver.h  test_src.cpp
Client/c_soundzone_client/tests/: CMakeLists.txt
Client/c_soundzone_client/tests/c_project_test/: CMakeLists.txt  c_project_test.cpp
Client/c_soundzone_client/tests/test_DataTransport/: CMakeLists.txt  test_DataTransport.cpp
include/: alsadriver.h  dummy_alsa_driver.h  sync_handler.h  szs_client.h
src/: CMakeLists.txt  alsadriver.cpp  dummy_alsa_driver.cpp  main.cpp  sync_handler.cpp  szs_client.cpp  test_src.cpp
tests/: CMakeLists.txt
tests/test_clients/: CMakeLists.txt  test_clients.cpp
tests/test_project/: CMakeLists.txt  test_project.cpp
tests/test_recv_packet/: CMakeLists.txt  test_recv_packet.cpp  test_sync_jitter.cpp  test_sync_timeOfSync.cpp
tests/test_sync_jitter/: CMakeLists.txt  test_sync_jitter.cpp
tests/test_sync_timeOfSync/: CMakeLists.txt
